[project]
name = "rushdb-simple-rag"
version = "0.1.0"
description = "Simple RAG implementation using RushDB and FastAPI"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "rushdb>=1.2.0",
    "sentence-transformers>=2.2.0",
    "python-multipart>=0.0.6",
    "markdown>=3.5.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
